--- a/shop-project/shop-project-eureka-server/pom.xml
+++ b/shop-project/shop-project-eureka-server/pom.xml
@@ -10,23 +10,13 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>shop-project-eureka-server</artifactId>
+    <packaging>pom</packaging>
+    <modules>
+        <module>ljs-eureka-server</module>
+    </modules>
 
 
-    <dependencies>
 
-        <!-- springboot-web -->
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
-            <version>${spring-boot.version}</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-netflix-eureka-server</artifactId>
-        </dependency>
-
-    </dependencies>
 
 
 </project>
