--- a/shop-project/pom.xml
+++ b/shop-project/pom.xml
@@ -24,10 +24,15 @@
         <druid.version>1.1.10</druid.version>
         <thymeleaf.version>2.2.2.RELEASE</thymeleaf.version>
         <lombok.version>1.18.8</lombok.version>
+        <junit.version>4.12</junit.version>
+        <log4j.version>1.2.17</log4j.version>
+        <rabbitmq.version>5.5.1</rabbitmq.version>
     </properties>
 
 
+    <!-- 项目依赖管理 -->
     <dependencyManagement>
+
         <dependencies>
 
             <!-- spring-cloud核心依赖 -->
@@ -83,11 +88,32 @@
                 <version>${lombok.version}</version>
             </dependency>
 
+            <!--测试与日志-->
+            <dependency>
+                <groupId>junit</groupId>
+                <artifactId>junit</artifactId>
+                <version>${junit.version}</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>log4j</groupId>
+                <artifactId>log4j</artifactId>
+                <version>${log4j.version}</version>
+            </dependency>
+
+            <!-- rabbitmq -->
+            <dependency>
+                <groupId>com.rabbitmq</groupId>
+                <artifactId>amqp-client</artifactId>
+                <version>${rabbitmq.version}</version>
+            </dependency>
+
+
+
+
 
 
         </dependencies>
-
-
     </dependencyManagement>
 
 
