--- a/shop-project/shop-project-common/ljs-shop-common/pom.xml
+++ b/shop-project/shop-project-common/ljs-shop-common/pom.xml
@@ -3,18 +3,22 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>shop-project</artifactId>
+        <artifactId>shop-project-common</artifactId>
         <groupId>com.qf</groupId>
         <version>1.0.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>shop-project-common</artifactId>
-    <packaging>pom</packaging>
-    <modules>
-        <module>ljs-shop-common</module>
-        <module>ljs-shop-common</module>
-    </modules>
+    <artifactId>ljs-shop-common</artifactId>
+
+    <dependencies>
+
+        <!-- lombok -->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
+    </dependencies>
 
 
 </project>
