--- a/shop-project/shop-project-service/pom.xml
+++ b/shop-project/shop-project-service/pom.xml
@@ -10,6 +10,15 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>shop-project-service</artifactId>
+    <packaging>pom</packaging>
+    <modules>
+        <module>ljs-shop-service</module>
+    </modules>
+
+    <dependencies>
+
+
+    </dependencies>
 
 
 </project>
