--- a/shop-project/shop-project-web/pom.xml
+++ b/shop-project/shop-project-web/pom.xml
@@ -10,6 +10,10 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>shop-project-web</artifactId>
+    <packaging>pom</packaging>
+    <modules>
+        <module>ljs-shop-web</module>
+    </modules>
 
 
 </project>
